--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bd-custom-woodwerx",
+  "name": "bd-custom-timberworks",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^3.2.2",
-    "@emotion/react": "^11.13.5",
+    "@chakra-ui/icons": "^2.2.4",
+    "@chakra-ui/react": "^3.5.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "emailjs-com": "^3.2.0",
     "next": "15.0.3",
     "next-themes": "^0.4.3",
     "react": "^18.3.1",
@@ -19,10 +22,10 @@
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "^18.3.18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
-    "typescript": "^5"
+    "typescript": "4.9"
   }
 }
