--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.2.4",
-    "@chakra-ui/react": "^3.6.0",
+    "@chakra-ui/react": "^3.8.0",
     "@chakra-ui/system": "^2.6.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "emailjs-com": "^3.2.0",
+    "framer-motion": "^12.4.2",
     "next": "15.0.3",
     "next-themes": "^0.4.3",
     "react": "^18.3.1",
